--- a/Dynamic QR code generator/index.html
+++ b/Dynamic QR code generator/index.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CodePen - Dynamic QR Code  Generator &amp; Export PNG  and SVG</title>
   <link rel="stylesheet" href="./style.css">
 </head>
